feat(rag): RAG v2 管线重构 + 文档分块升级 + Agent 知识库集成
RAG Retrieval Pipeline v2:
- 新增 RagRetrievalService 统一检索入口，支持多策略融合
- 新增 KeywordRetriever、VectorRetriever、MetadataRetriever 检索器
- 新增 CandidateFusionService 多路召回融合与去重
- 新增 RagRerankService 重排序服务
- 新增 QueryIntentAnalyzer 查询意图分析
- 新增 RagContextBuilder 构建 RAG 上下文
- 新增 PermissionFilter 基于用户角色的知识库访问控制
- RagCacheService 增强：per-KB TTL 配置、cache-aside 模式、仅缓存非空结果
- KmcKnowledgeBaseServiceImpl.recallTest() 重构为 RAG v2 主路径 + legacy 兜底
- 支持多轮对话历史压缩（QueryTransformService.compressQuery）

Document Sync & Splitting:
- 新增 RecursiveSplitter、SemanticSplitter、SplitterFactory
- KmcSyncServiceImpl 改为 @Scheduled 定时轮询，支持递归/语义分块模式切换
- 同步失败时标记 DocumentSyncStatus.ERROR 并记录原因
- 同步完成后自动清除关联知识库的 RAG 缓存
- save2sql 加 @Transactional 保证事务一致性

Hermes Agent Integration:
- AgentOrchestrator 将 RAG 预检索内容注入系统提示词
- 自动注册知识库工具（knowledgeBase{ID}）至 Agent 工具列表
- SearchKnowledgeTool 修正逻辑：有内容时返回检索结果，无内容时返回提示
- ChatModelFactory 新增环境变量 API Key 解析（resolveApiKey）
- OpenAI baseUrl 改为可选，默认 https://api.openai.com

AI Model API:
- IAiModelApiService 新增 getAiModel/getAiApiKey 接口
- AiModelApiServiceImpl 实现模型与 API Key 查询
- AiModelServiceImpl 列表接口返回模型 ID
- AiPlatformEnum.validatePlatform 改为 case-insensitive

KB Module:
- KbAgentConfigServiceImpl 通过 IAiModelApiService 获取完整模型配置
- 修复 listByIds 类型转换：String → Long
- KbChatMessageDO/KbConversationDO 的 validFlag/delFlag 类型 Boolean → Integer

KMC Module:
- 新增 recallDebug 接口 + RecallDebugRespVO（返回各阶段调试信息）
- 新增清除 RAG 缓存接口 DELETE /{id}/ragCache
- KmcKnowledgeBaseDO 新增 ragCacheTtl 字段
- RetrieveResultReqVO 支持 history（多轮对话历史）
- RetrieveResultRespVO 新增 source、debugInfo 字段
- WeaviateConstant 新增 day_no、category、position 元数据字段

Frontend:
- 新增 AgentRecallPreview 组件（Agent 召回内容预览）
- recall.vue 增加召回调试面板与缓存清除按钮
- settings.vue 知识库设置页面重构
- kmcDocument/selection/add.vue 文档选择页面优化

Infrastructure:
- QKnowApplication 启用 @EnableScheduling
- ChatModelServiceImpl/EmbeddingServiceImpl 移除 HTTP/1.1 强制降级
- SQL 迁移脚本：向量元数据回填、测试查询、RAG 缓存 TTL 列
- 新增 RagGoldenTest 黄金测试用例
- 